--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -1,19 +1,23 @@
 .about {
   margin: 15rem 0;
+
   .title {
     font-family: var(--raleway);
     color: var(--lightest-slate);
     position: relative;
+
     h2 {
       margin-bottom: 2rem;
       font-size: var(--tx2large);
       font-weight: 700;
+
       &::before {
         counter-increment: title;
         content: "0" counter(title) ".";
         margin-right: 0.5rem;
         color: var(--theme-color);
       }
+
       &::after {
         content: "";
         display: block;
@@ -45,7 +49,7 @@
         line-height: 1.6rem;
         font-weight: 500;
         font-family: var(--raleway);
-        text-align: justify; // ✅ added to justify About Me text
+        text-align: justify;
       }
 
       &-list {
@@ -83,10 +87,12 @@
         .overlay {
           background-color: #00000000;
         }
+
         .overlay-border {
           top: 0.5rem;
           left: 0.5rem;
         }
+
         img {
           filter: none;
         }
@@ -130,17 +136,20 @@
 
   @media screen and (max-width: 1080px) {
     margin: 5rem 0;
+
     &-grid {
       &-photo {
         .overlay {
           height: 223px;
           width: 223px;
         }
+
         &-container {
           height: 223px;
           width: 223px;
         }
       }
+
       &-info {
         &-list {
           grid-template-columns: 1fr;
@@ -209,6 +218,13 @@
           width: 223px;
         }
       }
+    }
+  }
+
+  // ✅ HIDE the heading line on mobile
+  @media screen and (max-width: 600px) {
+    .title h2::after {
+      display: none;
     }
   }
 }
